Btrfs: sectorsize align offsets in fiemap (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -430,6 +430,7 @@
         patches.suse/btrfs-0249-prefix-resize-related-printks-with-btrfs.patch
         patches.suse/btrfs-0250-wait-on-caching-if-we-re-loading-the-free-spac.patch
         patches.suse/btrfs-0251-clear-pages-dirty-for-io-and-set-them-extent-m.patch
+        patches.suse/btrfs-0252-sectorsize-align-offsets-in-fiemap.patch
 
 	# josef's tree
 
