Btrfs: check unused against how much space we actually want (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -320,6 +320,7 @@
         patches.suse/btrfs-0138-delay-iput-when-deleting-a-block-group.patch
         patches.suse/btrfs-0139-use-the-inode-s-mapping-mask-for-allocating-pa.patch
         patches.suse/btrfs-0140-fix-orphan-cleanup-regression.patch
+        patches.suse/btrfs-0141-check-unused-against-how-much-space-we-actuall.patch
 
 	# josef's tree
 
