Btrfs: add a log of past tree roots (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -371,6 +371,7 @@
         patches.suse/btrfs-0189-release-metadata-from-global-reserve-if-we-hav.patch
         patches.suse/btrfs-0190-use-the-global-reserve-when-truncating-the-fre.patch
         patches.suse/btrfs-0191-separate-superblock-items-out-of-fs_info.patch
+        patches.suse/btrfs-0192-add-a-log-of-past-tree-roots.patch
 
 	# josef's tree
 
