Btrfs: kill the orphan space calculation for snapshots (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -296,6 +296,7 @@
         patches.suse/btrfs-0114-use-bytes_may_use-for-all-ENOSPC-reservations.patch
         patches.suse/btrfs-0115-skip-looking-for-delalloc-if-we-don-t-have-fil.patch
         patches.suse/btrfs-0116-calculate-checksum-space-correctly.patch
+        patches.suse/btrfs-0117-kill-the-orphan-space-calculation-for-snapshot.patch
 
 	# josef's tree
 
