btrfs: separate superblock items out of fs_info (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -370,6 +370,7 @@
         patches.suse/btrfs-0188-make-sure-to-flush-queued-bios-if-write_cache_.patch
         patches.suse/btrfs-0189-release-metadata-from-global-reserve-if-we-hav.patch
         patches.suse/btrfs-0190-use-the-global-reserve-when-truncating-the-fre.patch
+        patches.suse/btrfs-0191-separate-superblock-items-out-of-fs_info.patch
 
 	# josef's tree
 
