Btrfs: fix deadlock on metadata reservation when evicting a inode (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -433,6 +433,7 @@
         patches.suse/btrfs-0252-sectorsize-align-offsets-in-fiemap.patch
         patches.suse/btrfs-0253-remove-free-space-cache.c-WARN-during-log-repl.patch
         patches.suse/btrfs-0254-scrub-handle-ENOMEM-from-init_ipath.patch
+        patches.suse/btrfs-0256-fix-deadlock-on-metadata-reservation-when-evic.patch
 
 	# josef's tree
 
