--- a/series.conf
+++ b/series.conf
@@ -415,6 +415,7 @@
         patches.suse/btrfs-0234-fix-no-reserved-space-for-writing-out-inode-ca.patch
         patches.suse/btrfs-0235-fix-unreleased-path-in-btrfs_orphan_cleanup.patch
         patches.suse/btrfs-0236-Abstract-similar-code-for-btrfs_block_rsv_add-.patch
+        patches.suse/btrfs-0237-fix-orphan-backref-nodes.patch
 
 	# josef's tree
 
