--- a/series.conf
+++ b/series.conf
@@ -366,6 +366,7 @@
         patches.suse/btrfs-0184-ratelimit-WARN_ON-in-use_block_rsv.patch
         patches.suse/btrfs-0185-don-t-wait-as-long-for-more-batches-during-SSD.patch
         patches.suse/btrfs-0186-make-sure-btrfs_remove_free_space-doesn-t-leak.patch
+        patches.suse/btrfs-0187-fix-extent-pinning-bugs-in-the-tree-log.patch
 
 	# josef's tree
 
