Btrfs: use the inode's mapping mask for allocating pages (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -318,6 +318,7 @@
         patches.suse/btrfs-0136-stop-passing-a-trans-handle-all-around-the-res.patch
         patches.suse/btrfs-0137-make-sure-to-unset-trans-block_rsv-before-runn.patch
         patches.suse/btrfs-0138-delay-iput-when-deleting-a-block-group.patch
+        patches.suse/btrfs-0139-use-the-inode-s-mapping-mask-for-allocating-pa.patch
 
 	# josef's tree
 
