Btrfs: reserve some space for an orphan item when unlinking (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -340,6 +340,7 @@
         patches.suse/btrfs-0158-wait-for-ordered-extents-if-we-re-in-trouble-w.patch
         patches.suse/btrfs-0159-allow-shrink_delalloc-flush-the-needed-reclaim.patch
         patches.suse/btrfs-0160-release-trans-metadata-bytes-before-flushing-d.patch
+        patches.suse/btrfs-0161-reserve-some-space-for-an-orphan-item-when-unl.patch
 
 	# josef's tree
 
