Btrfs: fix leaked space in truncate (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -453,6 +453,7 @@
         patches.suse/btrfs-0901-fix-num_workers_starting-bug-and-other-bugs-in.patch
         patches.suse/btrfs-0902-deal-with-enospc-from-dirtying-inodes-properly.patch
 	patches.suse/btrfs-0903-fix-how-we-do-delalloc-reservations-and-how-we.patch
+	patches.suse/btrfs-0904-fix-leaked-space-in-truncate.patch
 
 	# suse patches (pending upstream approval)
 
