Btrfs: fix how we reserve space for deleting inodes (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -298,6 +298,7 @@
         patches.suse/btrfs-0116-calculate-checksum-space-correctly.patch
         patches.suse/btrfs-0117-kill-the-orphan-space-calculation-for-snapshot.patch
         patches.suse/btrfs-0118-kill-the-durable-block-rsv-stuff.patch
+        patches.suse/btrfs-0119-fix-how-we-reserve-space-for-deleting-inodes.patch
 
 	# josef's tree
 
