Btrfs: pass the correct root to lookup_free_space_inode() (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -356,6 +356,7 @@
         patches.suse/btrfs-0174-remove-BUG_ON-in-compress_file_range.patch
         patches.suse/btrfs-0175-fix-direct-io-vs-nodatacow.patch
         patches.suse/btrfs-0176-do-not-set-EXTENT_DIRTY-along-with-EXTENT_DELA.patch
+        patches.suse/btrfs-0177-pass-the-correct-root-to-lookup_free_space_ino.patch
 
 	# josef's tree
 
