Btrfs: ClearPageError during writepage and clean_tree_block (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -374,6 +374,7 @@
         patches.suse/btrfs-0192-add-a-log-of-past-tree-roots.patch
         patches.suse/btrfs-0193-make-a-delayed_block_rsv-for-the-delayed-item-.patch
         patches.suse/btrfs-0194-be-smarter-about-committing-the-transaction-in.patch
+        patches.suse/btrfs-0195-ClearPageError-during-writepage-and-clean_tree.patch
 
 	# josef's tree
 
