btrfs: add an extra wait mode to read_extent_buffer_pages (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -376,6 +376,7 @@
         patches.suse/btrfs-0194-be-smarter-about-committing-the-transaction-in.patch
         patches.suse/btrfs-0195-ClearPageError-during-writepage-and-clean_tree.patch
         patches.suse/btrfs-0196-fix-delayed-insertion-reservation.patch
+        patches.suse/btrfs-0197-add-an-extra-wait-mode-to-read_extent_buffer_p.patch
 
 	# josef's tree
 
