Btrfs: make sure btrfs_remove_free_space doesn't leak EAGAIN (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -365,6 +365,7 @@
         patches.suse/btrfs-0183-do-not-allow-mounting-non-subvolumes-via-subvo.patch
         patches.suse/btrfs-0184-ratelimit-WARN_ON-in-use_block_rsv.patch
         patches.suse/btrfs-0185-don-t-wait-as-long-for-more-batches-during-SSD.patch
+        patches.suse/btrfs-0186-make-sure-btrfs_remove_free_space-doesn-t-leak.patch
 
 	# josef's tree
 
