--- a/series.conf
+++ b/series.conf
@@ -362,6 +362,7 @@
         patches.suse/btrfs-0180-fix-oops-on-failure-path.patch
         patches.suse/btrfs-0181-fix-a-bug-when-opening-seed-devices.patch
         patches.suse/btrfs-0182-close-all-bdevs-on-mount-failure.patch
+        patches.suse/btrfs-0183-do-not-allow-mounting-non-subvolumes-via-subvo.patch
 
 	# josef's tree
 
