Btrfs: only map pages if we know we need them when reading the space cache (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -416,6 +416,7 @@
         patches.suse/btrfs-0235-fix-unreleased-path-in-btrfs_orphan_cleanup.patch
         patches.suse/btrfs-0236-Abstract-similar-code-for-btrfs_block_rsv_add-.patch
         patches.suse/btrfs-0237-fix-orphan-backref-nodes.patch
+        patches.suse/btrfs-0238-only-map-pages-if-we-know-we-need-them-when-re.patch
 
 	# josef's tree
 
