Btrfs: wait on caching if we're loading the free space cache (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -428,6 +428,7 @@
         patches.suse/btrfs-0247-avoid-unnecessary-bitmap-search-for-cluster-se.patch
         patches.suse/btrfs-0248-fix-stat-blocks-accounting.patch
         patches.suse/btrfs-0249-prefix-resize-related-printks-with-btrfs.patch
+        patches.suse/btrfs-0250-wait-on-caching-if-we-re-loading-the-free-spac.patch
 
 	# josef's tree
 
