--- a/series.conf
+++ b/series.conf
@@ -330,6 +330,7 @@
         patches.suse/btrfs-0148-introduce-mount-option-no_space_cache.patch
         patches.suse/btrfs-0149-don-t-skip-writing-out-a-empty-block-groups-ca.patch
         patches.suse/btrfs-0150-add-a-io_ctl-struct-and-helpers-for-dealing-wi.patch
+        patches.suse/btrfs-0151-check-the-return-value-of-filemap_write_and_wa.patch
 
 	# josef's tree
 
