--- a/series.conf
+++ b/series.conf
@@ -325,6 +325,7 @@
         patches.suse/btrfs-0143-stop-using-write_one_page.patch
         patches.suse/btrfs-0144-use-the-global-reserve-as-a-backup-for-deletin.patch
         patches.suse/btrfs-0145-break-out-of-orphan-cleanup-if-we-can-t-make-p.patch
+        patches.suse/btrfs-0146-allow-us-to-overcommit-our-enospc-reservations.patch
 
 	# josef's tree
 
