--- a/series.conf
+++ b/series.conf
@@ -421,6 +421,7 @@
 	patches.suse/btrfs-0240-handle-bio_add_page-failure-gracefully-in-scru.patch
 	patches.suse/btrfs-0241-rename-the-option-to-nospace_cache.patch
 	patches.suse/btrfs-0242-fix-tree-corruption-after-multi-thread-snapsho.patch
+        patches.suse/btrfs-0243-fix-barrier-flushes.patch
 
 	# josef's tree
 
