btrfs: new ioctls to do logical->inode and inode->path resolving (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -389,6 +389,7 @@
         patches.suse/btrfs-0207-add-mirror_num-to-extent_read_full_page.patch
         patches.suse/btrfs-0208-scrub-use-int-for-mirror_num-not-u64.patch
         patches.suse/btrfs-0209-scrub-add-fixup-code-for-errors-on-nodatasum-f.patch
+        patches.suse/btrfs-0210-new-ioctls-to-do-logical-inode-and-inode-path-.patch
 
 	# josef's tree
 
