Btrfs: only inherit btrfs specific flags when creating files (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -326,6 +326,7 @@
         patches.suse/btrfs-0144-use-the-global-reserve-as-a-backup-for-deletin.patch
         patches.suse/btrfs-0145-break-out-of-orphan-cleanup-if-we-can-t-make-p.patch
         patches.suse/btrfs-0146-allow-us-to-overcommit-our-enospc-reservations.patch
+        patches.suse/btrfs-0147-only-inherit-btrfs-specific-flags-when-creatin.patch
 
 	# josef's tree
 
