--- a/series.conf
+++ b/series.conf
@@ -341,6 +341,7 @@
         patches.suse/btrfs-0159-allow-shrink_delalloc-flush-the-needed-reclaim.patch
         patches.suse/btrfs-0160-release-trans-metadata-bytes-before-flushing-d.patch
         patches.suse/btrfs-0161-reserve-some-space-for-an-orphan-item-when-unl.patch
+        patches.suse/btrfs-0162-seperate-out-btrfs_block_rsv_check-out-into-2-.patch
 
 	# josef's tree
 
