--- a/series.conf
+++ b/series.conf
@@ -450,6 +450,7 @@
 
 	# josef's tree
         patches.suse/btrfs-0900-add-allocator-tracepoints.patch
+        patches.suse/btrfs-0901-fix-num_workers_starting-bug-and-other-bugs-in.patch
 
 	# suse patches (pending upstream approval)
 
