--- a/series.conf
+++ b/series.conf
@@ -319,6 +319,7 @@
         patches.suse/btrfs-0137-make-sure-to-unset-trans-block_rsv-before-runn.patch
         patches.suse/btrfs-0138-delay-iput-when-deleting-a-block-group.patch
         patches.suse/btrfs-0139-use-the-inode-s-mapping-mask-for-allocating-pa.patch
+        patches.suse/btrfs-0140-fix-orphan-cleanup-regression.patch
 
 	# josef's tree
 
