--- a/series.conf
+++ b/series.conf
@@ -423,6 +423,7 @@
 	patches.suse/btrfs-0242-fix-tree-corruption-after-multi-thread-snapsho.patch
         patches.suse/btrfs-0243-fix-barrier-flushes.patch
         patches.suse/btrfs-0244-Fix-up-32-64-bit-compatibility-for-new-ioctls.patch
+        patches.suse/btrfs-0245-mirror_num-should-be-int-not-u64.patch
 
 	# josef's tree
 
