--- a/series.conf
+++ b/series.conf
@@ -369,6 +369,7 @@
         patches.suse/btrfs-0187-fix-extent-pinning-bugs-in-the-tree-log.patch
         patches.suse/btrfs-0188-make-sure-to-flush-queued-bios-if-write_cache_.patch
         patches.suse/btrfs-0189-release-metadata-from-global-reserve-if-we-hav.patch
+        patches.suse/btrfs-0190-use-the-global-reserve-when-truncating-the-fre.patch
 
 	# josef's tree
 
