--- a/series.conf
+++ b/series.conf
@@ -383,6 +383,7 @@
         patches.suse/btrfs-0201-hooks-for-readahead.patch
         patches.suse/btrfs-0202-use-readahead-API-for-scrub.patch
         patches.suse/btrfs-0203-added-helper-functions-to-iterate-backrefs.patch
+        patches.suse/btrfs-0204-scrub-added-unverified_errors.patch
 
 	# josef's tree
 
