Btrfs: fix how we mount subvol=<whatever> (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -292,6 +292,7 @@
         patches.suse/btrfs-0110-move-stuff-around-in-btrfs_inode-to-get-better.patch
         patches.suse/btrfs-0111-kill-reserved_bytes-in-inode.patch
         patches.suse/btrfs-0112-use-d_obtain_alias-when-mounting-subvol-subvol.patch
+        patches.suse/btrfs-0113-fix-how-we-mount-subvol-whatever.patch
 
 	# josef's tree
 
