--- a/series.conf
+++ b/series.conf
@@ -460,6 +460,7 @@
 
 	# patches collected from mailinglist
         patches.suse/btrfs-8001-rewrite-btrfs_trim_block_group.patch
+	patches.suse/btrfs-8013-sector-size-check-during-mount.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
