Btrfs: fix btrfs_end_bio to deal with write errors to a single mirror (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -446,6 +446,7 @@
         patches.suse/btrfs-0266-try-cluster-but-don-t-advance-in-search-list.patch
         patches.suse/btrfs-0267-check-if-the-to-be-added-device-is-writable.patch
         patches.suse/btrfs-0268-drop-spin-lock-when-memory-alloc-fails.patch
+	patches.suse/btrfs-0269-fix-btrfs_end_bio-to-deal-with-write-errors-to.patch
 
 	# josef's tree
 
