--- a/series.conf
+++ b/series.conf
@@ -431,6 +431,7 @@
         patches.suse/btrfs-0250-wait-on-caching-if-we-re-loading-the-free-spac.patch
         patches.suse/btrfs-0251-clear-pages-dirty-for-io-and-set-them-extent-m.patch
         patches.suse/btrfs-0252-sectorsize-align-offsets-in-fiemap.patch
+        patches.suse/btrfs-0253-remove-free-space-cache.c-WARN-during-log-repl.patch
 
 	# josef's tree
 
