Btrfs: handle bio_add_page failure gracefully in scrub (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -418,6 +418,7 @@
         patches.suse/btrfs-0237-fix-orphan-backref-nodes.patch
         patches.suse/btrfs-0238-only-map-pages-if-we-know-we-need-them-when-re.patch
         patches.suse/btrfs-0239-fix-deadlock-caused-by-the-race-between-reloca.patch
+	patches.suse/btrfs-0240-handle-bio_add_page-failure-gracefully-in-scru.patch
 
 	# josef's tree
 
