Btrfs: start search for new cluster at the beginning (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -438,6 +438,7 @@
         patches.suse/btrfs-0258-fix-oops-when-calling-statfs-on-readonly-devic.patch
         patches.suse/btrfs-0259-initialize-new-bitmaps-list.patch
         patches.suse/btrfs-0260-reset-cluster-s-max_size-when-creating-bitmap.patch
+        patches.suse/btrfs-0261-start-search-for-new-cluster-at-the-beginning.patch
 
 	# josef's tree
 
