--- a/series.conf
+++ b/series.conf
@@ -417,6 +417,7 @@
         patches.suse/btrfs-0236-Abstract-similar-code-for-btrfs_block_rsv_add-.patch
         patches.suse/btrfs-0237-fix-orphan-backref-nodes.patch
         patches.suse/btrfs-0238-only-map-pages-if-we-know-we-need-them-when-re.patch
+        patches.suse/btrfs-0239-fix-deadlock-caused-by-the-race-between-reloca.patch
 
 	# josef's tree
 
