--- a/series.conf
+++ b/series.conf
@@ -315,6 +315,7 @@
         patches.suse/btrfs-0133-handle-enospc-accounting-for-free-space-inodes.patch
         patches.suse/btrfs-0134-use-the-transactions-block_rsv-for-the-csum-ro.patch
         patches.suse/btrfs-0135-don-t-get-the-block_rsv-in-btrfs_free_tree_blo.patch
+        patches.suse/btrfs-0136-stop-passing-a-trans-handle-all-around-the-res.patch
 
 	# josef's tree
 
