--- a/series.conf
+++ b/series.conf
@@ -359,6 +359,7 @@
         patches.suse/btrfs-0177-pass-the-correct-root-to-lookup_free_space_ino.patch
         patches.suse/btrfs-0178-fix-return-value-of-btrfs_get_acl.patch
         patches.suse/btrfs-0179-fix-race-between-multi-task-space-allocation-a.patch
+        patches.suse/btrfs-0180-fix-oops-on-failure-path.patch
 
 	# josef's tree
 
