Btrfs: skip allocation attempt from empty cluster (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -440,6 +440,7 @@
         patches.suse/btrfs-0260-reset-cluster-s-max_size-when-creating-bitmap.patch
         patches.suse/btrfs-0261-start-search-for-new-cluster-at-the-beginning.patch
         patches.suse/btrfs-0262-skip-block-groups-without-enough-space-for-a-c.patch
+        patches.suse/btrfs-0263-skip-allocation-attempt-from-empty-cluster.patch
 
 	# josef's tree
 
