Btrfs: set truncate block rsv's size (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -310,6 +310,7 @@
         patches.suse/btrfs-0128-fix-call-to-btrfs_search_slot-in-free-space-ca.patch
         patches.suse/btrfs-0129-fix-space-leak-when-we-fail-to-make-an-allocat.patch
         patches.suse/btrfs-0130-don-t-increase-the-block_rsv-s-size-when-emerg.patch
+        patches.suse/btrfs-0131-set-truncate-block-rsv-s-size.patch
 
 	# josef's tree
 
