Btrfs: avoid unnecessary bitmap search for cluster setup (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -425,6 +425,7 @@
         patches.suse/btrfs-0244-Fix-up-32-64-bit-compatibility-for-new-ioctls.patch
         patches.suse/btrfs-0245-mirror_num-should-be-int-not-u64.patch
         patches.suse/btrfs-0246-fix-to-search-one-more-bitmap-for-cluster-setu.patch
+        patches.suse/btrfs-0247-avoid-unnecessary-bitmap-search-for-cluster-se.patch
 
 	# josef's tree
 
