Btrfs: use the global reserve as a backup for deleting inodes (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -323,6 +323,7 @@
         patches.suse/btrfs-0141-check-unused-against-how-much-space-we-actuall.patch
         patches.suse/btrfs-0142-introduce-convert_extent_bit.patch
         patches.suse/btrfs-0143-stop-using-write_one_page.patch
+        patches.suse/btrfs-0144-use-the-global-reserve-as-a-backup-for-deletin.patch
 
 	# josef's tree
 
