btrfs: Do not use bio->bi_bdev after submission (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -391,6 +391,7 @@
         patches.suse/btrfs-0209-scrub-add-fixup-code-for-errors-on-nodatasum-f.patch
         patches.suse/btrfs-0210-new-ioctls-to-do-logical-inode-and-inode-path-.patch
         patches.suse/btrfs-0211-btrfs_multi_bio-replaced-with-btrfs_bio.patch
+        patches.suse/btrfs-0212-Do-not-use-bio-bi_bdev-after-submission.patch
 
 	# josef's tree
 
