Btrfs: Abstract similar code for btrfs_block_rsv_add{, _noflush} (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -414,6 +414,7 @@
         patches.suse/btrfs-0233-fix-nocow-when-deleting-the-item.patch
         patches.suse/btrfs-0234-fix-no-reserved-space-for-writing-out-inode-ca.patch
         patches.suse/btrfs-0235-fix-unreleased-path-in-btrfs_orphan_cleanup.patch
+        patches.suse/btrfs-0236-Abstract-similar-code-for-btrfs_block_rsv_add-.patch
 
 	# josef's tree
 
