Btrfs: rework error handling in btrfs_mount() (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -409,6 +409,7 @@
         patches.suse/btrfs-0228-fix-subvol_name-leak-on-error-in-btrfs_mount.patch
         patches.suse/btrfs-0229-avoid-null-dereference-and-leaks-when-bailing-.patch
         patches.suse/btrfs-0230-close-devices-on-all-error-paths-in-open_ctree.patch
+        patches.suse/btrfs-0231-rework-error-handling-in-btrfs_mount.patch
 
 	# josef's tree
 
