--- a/series.conf
+++ b/series.conf
@@ -405,6 +405,7 @@
         patches.suse/btrfs-0224-fix-double-free-tree_root-in-btrfs_mount.patch
         patches.suse/btrfs-0225-fix-oops-on-NULL-trans-handle-in-btrfs_truncat.patch
         patches.suse/btrfs-0226-fix-our-reservations-for-updating-an-inode-whe.patch
+        patches.suse/btrfs-0227-fix-memory-leak-in-btrfs_parse_early_options.patch
 
 	# josef's tree
 
