btrfs: btrfs_multi_bio replaced with btrfs_bio (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -390,6 +390,7 @@
         patches.suse/btrfs-0208-scrub-use-int-for-mirror_num-not-u64.patch
         patches.suse/btrfs-0209-scrub-add-fixup-code-for-errors-on-nodatasum-f.patch
         patches.suse/btrfs-0210-new-ioctls-to-do-logical-inode-and-inode-path-.patch
+        patches.suse/btrfs-0211-btrfs_multi_bio-replaced-with-btrfs_bio.patch
 
 	# josef's tree
 
