Btrfs: don't flush the cache inode before writing it (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -343,6 +343,7 @@
         patches.suse/btrfs-0161-reserve-some-space-for-an-orphan-item-when-unl.patch
         patches.suse/btrfs-0162-seperate-out-btrfs_block_rsv_check-out-into-2-.patch
         patches.suse/btrfs-0163-if-we-have-a-lot-of-pinned-space-commit-the-tr.patch
+        patches.suse/btrfs-0164-don-t-flush-the-cache-inode-before-writing-it.patch
 
 	# josef's tree
 
