Btrfs: introduce convert_extent_bit (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -321,6 +321,7 @@
         patches.suse/btrfs-0139-use-the-inode-s-mapping-mask-for-allocating-pa.patch
         patches.suse/btrfs-0140-fix-orphan-cleanup-regression.patch
         patches.suse/btrfs-0141-check-unused-against-how-much-space-we-actuall.patch
+        patches.suse/btrfs-0142-introduce-convert_extent_bit.patch
 
 	# josef's tree
 
