Btrfs: be smarter about committing the transaction in reserve_metadata_bytes (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -373,6 +373,7 @@
         patches.suse/btrfs-0191-separate-superblock-items-out-of-fs_info.patch
         patches.suse/btrfs-0192-add-a-log-of-past-tree-roots.patch
         patches.suse/btrfs-0193-make-a-delayed_block_rsv-for-the-delayed-item-.patch
+        patches.suse/btrfs-0194-be-smarter-about-committing-the-transaction-in.patch
 
 	# josef's tree
 
