--- a/series.conf
+++ b/series.conf
@@ -344,6 +344,7 @@
         patches.suse/btrfs-0162-seperate-out-btrfs_block_rsv_check-out-into-2-.patch
         patches.suse/btrfs-0163-if-we-have-a-lot-of-pinned-space-commit-the-tr.patch
         patches.suse/btrfs-0164-don-t-flush-the-cache-inode-before-writing-it.patch
+        patches.suse/btrfs-0165-check-file-extent-backref-offset-underflow.patch
 
 	# josef's tree
 
