btrfs: add new ioctl to determine size of compressed file (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -461,6 +461,7 @@
 	# patches collected from mailinglist
         patches.suse/btrfs-8001-rewrite-btrfs_trim_block_group.patch
 	patches.suse/btrfs-8013-sector-size-check-during-mount.patch
+	patches.suse/btrfs-8014-add-new-ioctl-to-determine-size-of-compressed-.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
