Btrfs: don't check bytes_pinned to determine if we should commit the transaction (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -336,6 +336,7 @@
         patches.suse/btrfs-0154-wait-for-ordered-extents-if-we-didn-t-reclaim-.patch
         patches.suse/btrfs-0155-fix-the-amount-of-space-reserved-for-unlink.patch
         patches.suse/btrfs-0156-fix-regression-in-re-setting-a-large-xattr.patch
+        patches.suse/btrfs-0157-don-t-check-bytes_pinned-to-determine-if-we-sh.patch
 
 	# josef's tree
 
