Btrfs: move stuff around in btrfs_inode to get better packing (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -289,6 +289,17 @@
 	# btrfs
 	########################################################
 
+        patches.suse/btrfs-0110-move-stuff-around-in-btrfs_inode-to-get-better.patch
+
+	# josef's tree
+
+	# suse patches (pending upstream approval)
+
+	# patches collected from mailinglist
+
+	# Workaround for bnc#672923. Will be removed once we come up
+	# with something that can go upstream.
+
 	########################################################
 	# Reiserfs Patches
 	########################################################
