--- a/series.conf
+++ b/series.conf
@@ -406,6 +406,7 @@
         patches.suse/btrfs-0225-fix-oops-on-NULL-trans-handle-in-btrfs_truncat.patch
         patches.suse/btrfs-0226-fix-our-reservations-for-updating-an-inode-whe.patch
         patches.suse/btrfs-0227-fix-memory-leak-in-btrfs_parse_early_options.patch
+        patches.suse/btrfs-0228-fix-subvol_name-leak-on-error-in-btrfs_mount.patch
 
 	# josef's tree
 
