Btrfs: drop spin lock when memory alloc fails (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -445,6 +445,7 @@
         patches.suse/btrfs-0265-try-to-allocate-from-cluster-even-at-LOOP_NO_E.patch
         patches.suse/btrfs-0266-try-cluster-but-don-t-advance-in-search-list.patch
         patches.suse/btrfs-0267-check-if-the-to-be-added-device-is-writable.patch
+        patches.suse/btrfs-0268-drop-spin-lock-when-memory-alloc-fails.patch
 
 	# josef's tree
 
