btrfs: Fix up 32/64-bit compatibility for new ioctls (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -422,6 +422,7 @@
 	patches.suse/btrfs-0241-rename-the-option-to-nospace_cache.patch
 	patches.suse/btrfs-0242-fix-tree-corruption-after-multi-thread-snapsho.patch
         patches.suse/btrfs-0243-fix-barrier-flushes.patch
+        patches.suse/btrfs-0244-Fix-up-32-64-bit-compatibility-for-new-ioctls.patch
 
 	# josef's tree
 
