btrfs: allow cross-subvolume file clone (bnc#698540).

--- a/series.conf
+++ b/series.conf
@@ -456,6 +456,7 @@
 	patches.suse/btrfs-0904-fix-leaked-space-in-truncate.patch
 
 	# suse patches (pending upstream approval)
+	patches.suse/btrfs-allow-cross-subvolume-file-clone.patch
 
 	# patches collected from mailinglist
 
