Btrfs: fix the new inspection ioctls for 32 bit compat (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -395,6 +395,7 @@
         patches.suse/btrfs-0213-Put-mirror_num-in-bi_bdev.patch
         patches.suse/btrfs-0214-Moved-repair-code-from-inode.c-to-extent_io.c.patch
         patches.suse/btrfs-0215-integrating-raid-repair-and-scrub-fixup-nodata.patch
+        patches.suse/btrfs-0216-fix-the-new-inspection-ioctls-for-32-bit-compa.patch
 
 	# josef's tree
 
