btrfs: Introduce btrfs_get_maps_dev() (bnc#672923).

--- a/series.conf
+++ b/series.conf
@@ -467,6 +467,7 @@
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
 	patches.suse/0001-vfs-allow-proc-pid-maps-to-return-a-custom-device.patch
+	patches.suse/0002-btrfs-Introduce-btrfs_get_maps_dev.patch
 
 	########################################################
 	# Reiserfs Patches
