--- a/series.conf
+++ b/series.conf
@@ -401,6 +401,7 @@
         patches.suse/btrfs-0219-stop-leaking-btrfs_bios-on-readahead.patch
         patches.suse/btrfs-0221-fix-a-potential-btrfs_bio-leak-on-scrub-fixups.patch
         patches.suse/btrfs-0222-fix-race-during-transaction-joins.patch
+        patches.suse/btrfs-0223-check-for-a-null-fs-root-when-writing-to-the-b.patch
 
 	# josef's tree
 
