--- a/series.conf
+++ b/series.conf
@@ -311,6 +311,7 @@
         patches.suse/btrfs-0129-fix-space-leak-when-we-fail-to-make-an-allocat.patch
         patches.suse/btrfs-0130-don-t-increase-the-block_rsv-s-size-when-emerg.patch
         patches.suse/btrfs-0131-set-truncate-block-rsv-s-size.patch
+        patches.suse/btrfs-0132-put-the-block-group-cache-after-we-commit-the-.patch
 
 	# josef's tree
 
