Btrfs: only reserve space in fallocate if we have to do a preallocate (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -304,6 +304,7 @@
         patches.suse/btrfs-0122-don-t-try-to-commit-in-btrfs_block_rsv_check.patch
         patches.suse/btrfs-0123-optimize-how-we-account-for-space-in-truncate.patch
         patches.suse/btrfs-0124-kill-btrfs_truncate_reserve_metadata.patch
+        patches.suse/btrfs-0125-only-reserve-space-in-fallocate-if-we-have-to-.patch
 
 	# josef's tree
 
