btrfs: Put mirror_num in bi_bdev (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -392,6 +392,7 @@
         patches.suse/btrfs-0210-new-ioctls-to-do-logical-inode-and-inode-path-.patch
         patches.suse/btrfs-0211-btrfs_multi_bio-replaced-with-btrfs_bio.patch
         patches.suse/btrfs-0212-Do-not-use-bio-bi_bdev-after-submission.patch
+        patches.suse/btrfs-0213-Put-mirror_num-in-bi_bdev.patch
 
 	# josef's tree
 
