--- a/series.conf
+++ b/series.conf
@@ -452,6 +452,7 @@
         patches.suse/btrfs-0900-add-allocator-tracepoints.patch
         patches.suse/btrfs-0901-fix-num_workers_starting-bug-and-other-bugs-in.patch
         patches.suse/btrfs-0902-deal-with-enospc-from-dirtying-inodes-properly.patch
+	patches.suse/btrfs-0903-fix-how-we-do-delalloc-reservations-and-how-we.patch
 
 	# suse patches (pending upstream approval)
 
