--- a/series.conf
+++ b/series.conf
@@ -309,6 +309,7 @@
         patches.suse/btrfs-0127-allow-callers-to-specify-if-flushing-can-occur.patch
         patches.suse/btrfs-0128-fix-call-to-btrfs_search_slot-in-free-space-ca.patch
         patches.suse/btrfs-0129-fix-space-leak-when-we-fail-to-make-an-allocat.patch
+        patches.suse/btrfs-0130-don-t-increase-the-block_rsv-s-size-when-emerg.patch
 
 	# josef's tree
 
