--- a/series.conf
+++ b/series.conf
@@ -349,6 +349,7 @@
         patches.suse/btrfs-0167-fix-defragmentation-regression.patch
         patches.suse/btrfs-0168-use-i_size_read-in-btrfs_defrag_file.patch
         patches.suse/btrfs-0169-fix-wrong-max_to_defrag-in-btrfs_defrag_file.patch
+        patches.suse/btrfs-0170-trivial-fix-a-potential-memory-leak-in-btrfs_p.patch
 
 	# josef's tree
 
