--- a/series.conf
+++ b/series.conf
@@ -451,6 +451,7 @@
 	# josef's tree
         patches.suse/btrfs-0900-add-allocator-tracepoints.patch
         patches.suse/btrfs-0901-fix-num_workers_starting-bug-and-other-bugs-in.patch
+        patches.suse/btrfs-0902-deal-with-enospc-from-dirtying-inodes-properly.patch
 
 	# suse patches (pending upstream approval)
 
