--- a/series.conf
+++ b/series.conf
@@ -388,6 +388,7 @@
         patches.suse/btrfs-0206-scrub-bugfix-mirror_num-off-by-one.patch
         patches.suse/btrfs-0207-add-mirror_num-to-extent_read_full_page.patch
         patches.suse/btrfs-0208-scrub-use-int-for-mirror_num-not-u64.patch
+        patches.suse/btrfs-0209-scrub-add-fixup-code-for-errors-on-nodatasum-f.patch
 
 	# josef's tree
 
