--- a/series.conf
+++ b/series.conf
@@ -410,6 +410,7 @@
         patches.suse/btrfs-0229-avoid-null-dereference-and-leaks-when-bailing-.patch
         patches.suse/btrfs-0230-close-devices-on-all-error-paths-in-open_ctree.patch
         patches.suse/btrfs-0231-rework-error-handling-in-btrfs_mount.patch
+        patches.suse/btrfs-0232-tweak-the-delayed-inode-reservations-again.patch
 
 	# josef's tree
 
