--- a/series.conf
+++ b/series.conf
@@ -436,6 +436,7 @@
         patches.suse/btrfs-0256-fix-deadlock-on-metadata-reservation-when-evic.patch
         patches.suse/btrfs-0257-Don-t-error-on-resizing-FS-to-same-size.patch
         patches.suse/btrfs-0258-fix-oops-when-calling-statfs-on-readonly-devic.patch
+        patches.suse/btrfs-0259-initialize-new-bitmaps-list.patch
 
 	# josef's tree
 
