btrfs: initial readahead code and prototypes (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -379,6 +379,7 @@
         patches.suse/btrfs-0197-add-an-extra-wait-mode-to-read_extent_buffer_p.patch
         patches.suse/btrfs-0198-add-READAHEAD-extent-buffer-flag.patch
         patches.suse/btrfs-0199-state-information-for-readahead.patch
+        patches.suse/btrfs-0200-initial-readahead-code-and-prototypes.patch
 
 	# josef's tree
 
