Btrfs: make a delayed_block_rsv for the delayed item insertion (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -372,6 +372,7 @@
         patches.suse/btrfs-0190-use-the-global-reserve-when-truncating-the-fre.patch
         patches.suse/btrfs-0191-separate-superblock-items-out-of-fs_info.patch
         patches.suse/btrfs-0192-add-a-log-of-past-tree-roots.patch
+        patches.suse/btrfs-0193-make-a-delayed_block_rsv-for-the-delayed-item-.patch
 
 	# josef's tree
 
