btrfs: integrating raid-repair and scrub-fixup-nodatasum (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -394,6 +394,7 @@
         patches.suse/btrfs-0212-Do-not-use-bio-bi_bdev-after-submission.patch
         patches.suse/btrfs-0213-Put-mirror_num-in-bi_bdev.patch
         patches.suse/btrfs-0214-Moved-repair-code-from-inode.c-to-extent_io.c.patch
+        patches.suse/btrfs-0215-integrating-raid-repair-and-scrub-fixup-nodata.patch
 
 	# josef's tree
 
