Btrfs: fix defragmentation regression (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -346,6 +346,7 @@
         patches.suse/btrfs-0164-don-t-flush-the-cache-inode-before-writing-it.patch
         patches.suse/btrfs-0165-check-file-extent-backref-offset-underflow.patch
         patches.suse/btrfs-0166-fix-memory-leak-in-btrfs_defrag_file.patch
+        patches.suse/btrfs-0167-fix-defragmentation-regression.patch
 
 	# josef's tree
 
