--- a/series.conf
+++ b/series.conf
@@ -301,6 +301,7 @@
         patches.suse/btrfs-0119-fix-how-we-reserve-space-for-deleting-inodes.patch
         patches.suse/btrfs-0120-ratelimit-the-generation-printk-for-the-free-s.patch
         patches.suse/btrfs-0121-kill-unused-parts-of-block_rsv.patch
+        patches.suse/btrfs-0122-don-t-try-to-commit-in-btrfs_block_rsv_check.patch
 
 	# josef's tree
 
