--- a/series.conf
+++ b/series.conf
@@ -307,6 +307,7 @@
         patches.suse/btrfs-0125-only-reserve-space-in-fallocate-if-we-have-to-.patch
         patches.suse/btrfs-0126-reduce-the-amount-of-space-needed-for-truncate.patch
         patches.suse/btrfs-0127-allow-callers-to-specify-if-flushing-can-occur.patch
+        patches.suse/btrfs-0128-fix-call-to-btrfs_search_slot-in-free-space-ca.patch
 
 	# josef's tree
 
