Btrfs: reduce the amount of space needed for truncates (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -305,6 +305,7 @@
         patches.suse/btrfs-0123-optimize-how-we-account-for-space-in-truncate.patch
         patches.suse/btrfs-0124-kill-btrfs_truncate_reserve_metadata.patch
         patches.suse/btrfs-0125-only-reserve-space-in-fallocate-if-we-have-to-.patch
+        patches.suse/btrfs-0126-reduce-the-amount-of-space-needed-for-truncate.patch
 
 	# josef's tree
 
