Btrfs: fix race during transaction joins (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -400,6 +400,7 @@
         patches.suse/btrfs-0218-stop-the-readahead-threads-on-failed-mount.patch
         patches.suse/btrfs-0219-stop-leaking-btrfs_bios-on-readahead.patch
         patches.suse/btrfs-0221-fix-a-potential-btrfs_bio-leak-on-scrub-fixups.patch
+        patches.suse/btrfs-0222-fix-race-during-transaction-joins.patch
 
 	# josef's tree
 
