--- a/series.conf
+++ b/series.conf
@@ -297,6 +297,7 @@
         patches.suse/btrfs-0115-skip-looking-for-delalloc-if-we-don-t-have-fil.patch
         patches.suse/btrfs-0116-calculate-checksum-space-correctly.patch
         patches.suse/btrfs-0117-kill-the-orphan-space-calculation-for-snapshot.patch
+        patches.suse/btrfs-0118-kill-the-durable-block-rsv-stuff.patch
 
 	# josef's tree
 
