Btrfs: use the transactions block_rsv for the csum root (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -313,6 +313,7 @@
         patches.suse/btrfs-0131-set-truncate-block-rsv-s-size.patch
         patches.suse/btrfs-0132-put-the-block-group-cache-after-we-commit-the-.patch
         patches.suse/btrfs-0133-handle-enospc-accounting-for-free-space-inodes.patch
+        patches.suse/btrfs-0134-use-the-transactions-block_rsv-for-the-csum-ro.patch
 
 	# josef's tree
 
