--- a/series.conf
+++ b/series.conf
@@ -403,6 +403,7 @@
         patches.suse/btrfs-0222-fix-race-during-transaction-joins.patch
         patches.suse/btrfs-0223-check-for-a-null-fs-root-when-writing-to-the-b.patch
         patches.suse/btrfs-0224-fix-double-free-tree_root-in-btrfs_mount.patch
+        patches.suse/btrfs-0225-fix-oops-on-NULL-trans-handle-in-btrfs_truncat.patch
 
 	# josef's tree
 
