--- a/series.conf
+++ b/series.conf
@@ -333,6 +333,7 @@
         patches.suse/btrfs-0151-check-the-return-value-of-filemap_write_and_wa.patch
         patches.suse/btrfs-0152-take-overflow-into-account-in-reserving-space.patch
         patches.suse/btrfs-0153-inline-checksums-into-the-disk-free-space-cach.patch
+        patches.suse/btrfs-0154-wait-for-ordered-extents-if-we-didn-t-reclaim-.patch
 
 	# josef's tree
 
