--- a/series.conf
+++ b/series.conf
@@ -427,6 +427,7 @@
         patches.suse/btrfs-0246-fix-to-search-one-more-bitmap-for-cluster-setu.patch
         patches.suse/btrfs-0247-avoid-unnecessary-bitmap-search-for-cluster-se.patch
         patches.suse/btrfs-0248-fix-stat-blocks-accounting.patch
+        patches.suse/btrfs-0249-prefix-resize-related-printks-with-btrfs.patch
 
 	# josef's tree
 
