Btrfs: fix the amount of space reserved for unlink (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -334,6 +334,7 @@
         patches.suse/btrfs-0152-take-overflow-into-account-in-reserving-space.patch
         patches.suse/btrfs-0153-inline-checksums-into-the-disk-free-space-cach.patch
         patches.suse/btrfs-0154-wait-for-ordered-extents-if-we-didn-t-reclaim-.patch
+        patches.suse/btrfs-0155-fix-the-amount-of-space-reserved-for-unlink.patch
 
 	# josef's tree
 
