--- a/series.conf
+++ b/series.conf
@@ -367,6 +367,7 @@
         patches.suse/btrfs-0185-don-t-wait-as-long-for-more-batches-during-SSD.patch
         patches.suse/btrfs-0186-make-sure-btrfs_remove_free_space-doesn-t-leak.patch
         patches.suse/btrfs-0187-fix-extent-pinning-bugs-in-the-tree-log.patch
+        patches.suse/btrfs-0188-make-sure-to-flush-queued-bios-if-write_cache_.patch
 
 	# josef's tree
 
