--- a/series.conf
+++ b/series.conf
@@ -360,6 +360,7 @@
         patches.suse/btrfs-0178-fix-return-value-of-btrfs_get_acl.patch
         patches.suse/btrfs-0179-fix-race-between-multi-task-space-allocation-a.patch
         patches.suse/btrfs-0180-fix-oops-on-failure-path.patch
+        patches.suse/btrfs-0181-fix-a-bug-when-opening-seed-devices.patch
 
 	# josef's tree
 
