--- a/series.conf
+++ b/series.conf
@@ -375,6 +375,7 @@
         patches.suse/btrfs-0193-make-a-delayed_block_rsv-for-the-delayed-item-.patch
         patches.suse/btrfs-0194-be-smarter-about-committing-the-transaction-in.patch
         patches.suse/btrfs-0195-ClearPageError-during-writepage-and-clean_tree.patch
+        patches.suse/btrfs-0196-fix-delayed-insertion-reservation.patch
 
 	# josef's tree
 
