Btrfs: add allocator tracepoints (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -449,6 +449,7 @@
 	patches.suse/btrfs-0269-fix-btrfs_end_bio-to-deal-with-write-errors-to.patch
 
 	# josef's tree
+        patches.suse/btrfs-0900-add-allocator-tracepoints.patch
 
 	# suse patches (pending upstream approval)
 
