Btrfs: kill reserved_bytes in inode (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -290,6 +290,7 @@
 	########################################################
 
         patches.suse/btrfs-0110-move-stuff-around-in-btrfs_inode-to-get-better.patch
+        patches.suse/btrfs-0111-kill-reserved_bytes-in-inode.patch
 
 	# josef's tree
 
