Btrfs: skip looking for delalloc if we don't have ->fill_delalloc (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -294,6 +294,7 @@
         patches.suse/btrfs-0112-use-d_obtain_alias-when-mounting-subvol-subvol.patch
         patches.suse/btrfs-0113-fix-how-we-mount-subvol-whatever.patch
         patches.suse/btrfs-0114-use-bytes_may_use-for-all-ENOSPC-reservations.patch
+        patches.suse/btrfs-0115-skip-looking-for-delalloc-if-we-don-t-have-fil.patch
 
 	# josef's tree
 
