--- a/series.conf
+++ b/series.conf
@@ -324,6 +324,7 @@
         patches.suse/btrfs-0142-introduce-convert_extent_bit.patch
         patches.suse/btrfs-0143-stop-using-write_one_page.patch
         patches.suse/btrfs-0144-use-the-global-reserve-as-a-backup-for-deletin.patch
+        patches.suse/btrfs-0145-break-out-of-orphan-cleanup-if-we-can-t-make-p.patch
 
 	# josef's tree
 
