Btrfs: clear pages dirty for io and set them extent mapped (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -429,6 +429,7 @@
         patches.suse/btrfs-0248-fix-stat-blocks-accounting.patch
         patches.suse/btrfs-0249-prefix-resize-related-printks-with-btrfs.patch
         patches.suse/btrfs-0250-wait-on-caching-if-we-re-loading-the-free-spac.patch
+        patches.suse/btrfs-0251-clear-pages-dirty-for-io-and-set-them-extent-m.patch
 
 	# josef's tree
 
