--- a/series.conf
+++ b/series.conf
@@ -434,6 +434,7 @@
         patches.suse/btrfs-0253-remove-free-space-cache.c-WARN-during-log-repl.patch
         patches.suse/btrfs-0254-scrub-handle-ENOMEM-from-init_ipath.patch
         patches.suse/btrfs-0256-fix-deadlock-on-metadata-reservation-when-evic.patch
+        patches.suse/btrfs-0257-Don-t-error-on-resizing-FS-to-same-size.patch
 
 	# josef's tree
 
