btrfs: use readahead API for scrub (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -381,6 +381,7 @@
         patches.suse/btrfs-0199-state-information-for-readahead.patch
         patches.suse/btrfs-0200-initial-readahead-code-and-prototypes.patch
         patches.suse/btrfs-0201-hooks-for-readahead.patch
+        patches.suse/btrfs-0202-use-readahead-API-for-scrub.patch
 
 	# josef's tree
 
