Btrfs: use i_size_read() in btrfs_defrag_file() (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -347,6 +347,7 @@
         patches.suse/btrfs-0165-check-file-extent-backref-offset-underflow.patch
         patches.suse/btrfs-0166-fix-memory-leak-in-btrfs_defrag_file.patch
         patches.suse/btrfs-0167-fix-defragmentation-regression.patch
+        patches.suse/btrfs-0168-use-i_size_read-in-btrfs_defrag_file.patch
 
 	# josef's tree
 
