Btrfs: fix race between multi-task space allocation and caching space (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -358,6 +358,7 @@
         patches.suse/btrfs-0176-do-not-set-EXTENT_DIRTY-along-with-EXTENT_DELA.patch
         patches.suse/btrfs-0177-pass-the-correct-root-to-lookup_free_space_ino.patch
         patches.suse/btrfs-0178-fix-return-value-of-btrfs_get_acl.patch
+        patches.suse/btrfs-0179-fix-race-between-multi-task-space-allocation-a.patch
 
 	# josef's tree
 
