--- a/series.conf
+++ b/series.conf
@@ -332,6 +332,7 @@
         patches.suse/btrfs-0150-add-a-io_ctl-struct-and-helpers-for-dealing-wi.patch
         patches.suse/btrfs-0151-check-the-return-value-of-filemap_write_and_wa.patch
         patches.suse/btrfs-0152-take-overflow-into-account-in-reserving-space.patch
+        patches.suse/btrfs-0153-inline-checksums-into-the-disk-free-space-cach.patch
 
 	# josef's tree
 
