Btrfs: try to allocate from cluster even at LOOP_NO_EMPTY_SIZE (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -442,6 +442,7 @@
         patches.suse/btrfs-0262-skip-block-groups-without-enough-space-for-a-c.patch
         patches.suse/btrfs-0263-skip-allocation-attempt-from-empty-cluster.patch
         patches.suse/btrfs-0264-fix-meta-data-raid-repair-merge-problem.patch
+        patches.suse/btrfs-0265-try-to-allocate-from-cluster-even-at-LOOP_NO_E.patch
 
 	# josef's tree
 
