--- a/series.conf
+++ b/series.conf
@@ -426,6 +426,7 @@
         patches.suse/btrfs-0245-mirror_num-should-be-int-not-u64.patch
         patches.suse/btrfs-0246-fix-to-search-one-more-bitmap-for-cluster-setu.patch
         patches.suse/btrfs-0247-avoid-unnecessary-bitmap-search-for-cluster-se.patch
+        patches.suse/btrfs-0248-fix-stat-blocks-accounting.patch
 
 	# josef's tree
 
