--- a/series.conf
+++ b/series.conf
@@ -293,6 +293,7 @@
         patches.suse/btrfs-0111-kill-reserved_bytes-in-inode.patch
         patches.suse/btrfs-0112-use-d_obtain_alias-when-mounting-subvol-subvol.patch
         patches.suse/btrfs-0113-fix-how-we-mount-subvol-whatever.patch
+        patches.suse/btrfs-0114-use-bytes_may_use-for-all-ENOSPC-reservations.patch
 
 	# josef's tree
 
