Btrfs: fix space leak when we fail to make an allocation (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -308,6 +308,7 @@
         patches.suse/btrfs-0126-reduce-the-amount-of-space-needed-for-truncate.patch
         patches.suse/btrfs-0127-allow-callers-to-specify-if-flushing-can-occur.patch
         patches.suse/btrfs-0128-fix-call-to-btrfs_search_slot-in-free-space-ca.patch
+        patches.suse/btrfs-0129-fix-space-leak-when-we-fail-to-make-an-allocat.patch
 
 	# josef's tree
 
