Btrfs: fix wrong max_to_defrag in btrfs_defrag_file() (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -348,6 +348,7 @@
         patches.suse/btrfs-0166-fix-memory-leak-in-btrfs_defrag_file.patch
         patches.suse/btrfs-0167-fix-defragmentation-regression.patch
         patches.suse/btrfs-0168-use-i_size_read-in-btrfs_defrag_file.patch
+        patches.suse/btrfs-0169-fix-wrong-max_to_defrag-in-btrfs_defrag_file.patch
 
 	# josef's tree
 
