--- a/series.conf
+++ b/series.conf
@@ -322,6 +322,7 @@
         patches.suse/btrfs-0140-fix-orphan-cleanup-regression.patch
         patches.suse/btrfs-0141-check-unused-against-how-much-space-we-actuall.patch
         patches.suse/btrfs-0142-introduce-convert_extent_bit.patch
+        patches.suse/btrfs-0143-stop-using-write_one_page.patch
 
 	# josef's tree
 
