--- a/series.conf
+++ b/series.conf
@@ -380,6 +380,7 @@
         patches.suse/btrfs-0198-add-READAHEAD-extent-buffer-flag.patch
         patches.suse/btrfs-0199-state-information-for-readahead.patch
         patches.suse/btrfs-0200-initial-readahead-code-and-prototypes.patch
+        patches.suse/btrfs-0201-hooks-for-readahead.patch
 
 	# josef's tree
 
