Btrfs: fix array bound checking (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -352,6 +352,7 @@
         patches.suse/btrfs-0170-trivial-fix-a-potential-memory-leak-in-btrfs_p.patch
         patches.suse/btrfs-0171-honor-extent-thresh-during-defragmentation.patch
         patches.suse/btrfs-0172-return-EINVAL-if-start-total_bytes-in-fitrim-i.patch
+        patches.suse/btrfs-0173-fix-array-bound-checking.patch
 
 	# josef's tree
 
