Btrfs: try cluster but don't advance in search list (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -443,6 +443,7 @@
         patches.suse/btrfs-0263-skip-allocation-attempt-from-empty-cluster.patch
         patches.suse/btrfs-0264-fix-meta-data-raid-repair-merge-problem.patch
         patches.suse/btrfs-0265-try-to-allocate-from-cluster-even-at-LOOP_NO_E.patch
+        patches.suse/btrfs-0266-try-cluster-but-don-t-advance-in-search-list.patch
 
 	# josef's tree
 
