--- a/series.conf
+++ b/series.conf
@@ -467,6 +467,7 @@
 	patches.suse/btrfs-8015-make-lzo-the-default-compression-scheme.patch
 	patches.suse/btrfs-8024-workaround-for-cleaner-deadlock.patch
 	patches.suse/btrfs-8025-update-global-block_rsv-when-creating-a-new-bl.patch
+	patches.suse/btrfs-8026-fix-possible-deadlock-when-opening-a-seed-devi.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
