--- a/series.conf
+++ b/series.conf
@@ -455,6 +455,7 @@
 	patches.suse/btrfs-0903-fix-how-we-do-delalloc-reservations-and-how-we.patch
 	patches.suse/btrfs-0904-fix-leaked-space-in-truncate.patch
 	patches.suse/btrfs-0905-only-set-cache_generation-if-we-setup-the-bloc.patch
+	patches.suse/btrfs-0906-don-t-panic-if-orphan-item-already-exists.patch
 
 	# suse patches (pending upstream approval)
 	patches.suse/btrfs-allow-cross-subvolume-file-clone.patch
