--- a/series.conf
+++ b/series.conf
@@ -471,6 +471,7 @@
 	patches.suse/btrfs-8027-fix-ctime-update-of-on-disk-inode.patch
 	patches.suse/btrfs-8028-fix-wrong-disk-space-information-of-the-files.patch
 	patches.suse/btrfs-8029-fix-wrong-i_size-when-truncating-a-file-to-a-l.patch
+	patches.suse/btrfs-8030-fix-inaccurate-available-space-on-raid0-profil.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
