--- a/series.conf
+++ b/series.conf
@@ -466,6 +466,7 @@
 	patches.suse/btrfs-8014-add-new-ioctl-to-determine-size-of-compressed-.patch
 	patches.suse/btrfs-8015-make-lzo-the-default-compression-scheme.patch
 	patches.suse/btrfs-8024-workaround-for-cleaner-deadlock.patch
+	patches.suse/btrfs-8025-update-global-block_rsv-when-creating-a-new-bl.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
