Btrfs: only set cache_generation if we setup the block group (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -454,6 +454,7 @@
         patches.suse/btrfs-0902-deal-with-enospc-from-dirtying-inodes-properly.patch
 	patches.suse/btrfs-0903-fix-how-we-do-delalloc-reservations-and-how-we.patch
 	patches.suse/btrfs-0904-fix-leaked-space-in-truncate.patch
+	patches.suse/btrfs-0905-only-set-cache_generation-if-we-setup-the-bloc.patch
 
 	# suse patches (pending upstream approval)
 	patches.suse/btrfs-allow-cross-subvolume-file-clone.patch
