Btrfs: fix wrong i_size when truncating a file to a larger size (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -470,6 +470,7 @@
 	patches.suse/btrfs-8026-fix-possible-deadlock-when-opening-a-seed-devi.patch
 	patches.suse/btrfs-8027-fix-ctime-update-of-on-disk-inode.patch
 	patches.suse/btrfs-8028-fix-wrong-disk-space-information-of-the-files.patch
+	patches.suse/btrfs-8029-fix-wrong-i_size-when-truncating-a-file-to-a-l.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
