--- a/series.conf
+++ b/series.conf
@@ -465,6 +465,7 @@
 	patches.suse/btrfs-8013-sector-size-check-during-mount.patch
 	patches.suse/btrfs-8014-add-new-ioctl-to-determine-size-of-compressed-.patch
 	patches.suse/btrfs-8015-make-lzo-the-default-compression-scheme.patch
+	patches.suse/btrfs-8024-workaround-for-cleaner-deadlock.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
