--- a/series.conf
+++ b/series.conf
@@ -469,6 +469,7 @@
 	patches.suse/btrfs-8025-update-global-block_rsv-when-creating-a-new-bl.patch
 	patches.suse/btrfs-8026-fix-possible-deadlock-when-opening-a-seed-devi.patch
 	patches.suse/btrfs-8027-fix-ctime-update-of-on-disk-inode.patch
+	patches.suse/btrfs-8028-fix-wrong-disk-space-information-of-the-files.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
