- Update Xen patches to 3.2-rc6 and c/s 1133. - kexec: properly handle pCPU hotplug. - x86: pCPU handling.

--- a/series.conf
+++ b/series.conf
@@ -617,6 +617,8 @@
 	patches.xen/xen3-patch-3.0
 	patches.xen/xen3-patch-3.1
 	patches.xen/xen3-patch-3.2-rc3
+	patches.xen/xen3-patch-3.2-rc4-rc5
+	patches.xen/xen3-patch-3.2-rc5-rc6
 	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
 	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
@@ -630,6 +632,7 @@
 	patches.xen/xen-clockevents
 	patches.xen/xen-spinlock-poll-early
 	patches.xen/xen-pcpu-hotplug
+	patches.xen/xen-pcpu-hotplug-kexec
 	patches.xen/xen-mem-hotplug
 	patches.xen/xen-swiotlb-heuristics
 	patches.xen/xen-configurable-guest-devices
@@ -660,7 +663,7 @@
 	patches.xen/xen-x86-bigmem
 	patches.xen/xen-x86-exit-mmap
 	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-msr-on-pcpu
+	patches.xen/xen-x86-pcpu
 	patches.xen/xen-x86-EFI
 	patches.xen/xen-x86_64-pgd-pin
 	patches.xen/xen-x86_64-pgd-alloc-order
