--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-3.1.2-3
 	patches.kernel.org/patch-3.1.3-4
 	patches.kernel.org/patch-3.1.4-5
+	patches.kernel.org/patch-3.1.5-6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -47,6 +48,8 @@
         ########################################################
 	patches.kabi/jiffies_to_clock_t-kABI_guard.patch
 	patches.kabi/revert-USB-fix-ehci-alignment-error
+	patches.kabi/revert-inet-add-a-redirect-generation-id-in-inetpeer.patch
+	patches.kabi/revert-clocksource-Avoid-selecting-mult-values-that-.patch
 
 	########################################################
 	#
@@ -183,7 +186,6 @@
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
 	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
-	patches.fixes/mm-Ensure-that-pfn_valid-is-called-once-per-pagebloc.patch
 
         ########################################################
         # IPC patches
@@ -530,7 +532,6 @@
 	# other filesystem stuff
 	########################################################
 	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
-	patches.fixes/hfs-fix-hfs_find_init-sb-ext_tree-null-ptr-oops.patch
 
 	########################################################
 	# Swap-over-NFS
