--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-3.1.2-3
 	patches.kernel.org/patch-3.1.3-4
 	patches.kernel.org/patch-3.1.4-5
+	patches.kernel.org/patch-3.1.5-6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -182,7 +183,6 @@
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
 	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
 	patches.fixes/oom-thaw-threads-if-oom-killed-thread-is-frozen-befo.patch
-	patches.fixes/mm-Ensure-that-pfn_valid-is-called-once-per-pagebloc.patch
 
         ########################################################
         # IPC patches
@@ -332,7 +332,6 @@
 	# other filesystem stuff
 	########################################################
 	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
-	patches.fixes/hfs-fix-hfs_find_init-sb-ext_tree-null-ptr-oops.patch
 
 	########################################################
 	# Swap-over-NFS
