sound: ratelimit sound debug prints.

--- a/series.conf
+++ b/series.conf
@@ -465,6 +465,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-0001-realtek-Fix-missing-volume-controls-with-ALC260
+	patches.suse/ratelimit-sound-debug-prints.patch
 
 	########################################################
 	# Char / serial
