--- a/series.conf
+++ b/series.conf
@@ -591,6 +591,7 @@
 	########################################################
 	patches.fixes/tulip-quad-NIC-ifdown
 	patches.drivers/ehea-modinfo.patch
+	patches.fixes/net-Add-a-flow_cache_flush_deferred-function.patch
 
 	########################################################
 	# Wireless Networking
