- btrfs: use correct device for maps (bnc#672923). - Delete   patches.suse/0001-vfs-allow-proc-pid-maps-to-return-a-custom-device.patch. - Delete   patches.suse/0002-btrfs-Introduce-btrfs_get_maps_dev.patch.

--- a/series.conf
+++ b/series.conf
@@ -483,8 +483,8 @@
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
-	patches.suse/0001-vfs-allow-proc-pid-maps-to-return-a-custom-device.patch
-	patches.suse/0002-btrfs-Introduce-btrfs_get_maps_dev.patch
+	# (ugly version preserving KABI)
+	patches.suse/btrfs-use-correct-device-for-maps.patch
 
 	########################################################
 	# Reiserfs Patches
