--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-3.1.3-4
 	patches.kernel.org/patch-3.1.4-5
 	patches.kernel.org/patch-3.1.5-6
+	patches.kernel.org/patch-3.1.6-7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
