--- a/series.conf
+++ b/series.conf
@@ -616,9 +616,7 @@
 	patches.xen/xen3-patch-2.6.39
 	patches.xen/xen3-patch-3.0
 	patches.xen/xen3-patch-3.1
-	patches.xen/xen3-patch-3.2-rc3
-	patches.xen/xen3-patch-3.2-rc4-rc5
-	patches.xen/xen3-patch-3.2-rc5-rc6
+	patches.xen/xen3-patch-3.2
 	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
 	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
