--- a/config.conf
+++ b/config.conf
@@ -45,6 +45,7 @@
 +armv7l         armv7l/imx51
 +armv7l         armv7l/omap2plus
 +armv7l         armv7l/tegra
++armv7l         armv7l/u8500
 
 # SLES
 # identical to ppc64 flavor, all KMP packages need a kernel-default
