KVM: PPC: Convert RMA allocation into generic code.

--- a/series.conf
+++ b/series.conf
@@ -143,6 +143,8 @@
 	patches.arch/ppc64-xmon-dmesg-printing.patch
 	patches.arch/ppc-prom-nodisplay.patch
 	patches.fixes/ptrace-getsiginfo
+	# KVM patches for OBS
+	patches.arch/ppc-kvm-convert-rma-allocation.patch
 
         ########################################################
         # PS3
