KVM: PPC: Add HPT preallocator.

--- a/series.conf
+++ b/series.conf
@@ -145,6 +145,7 @@
 	patches.fixes/ptrace-getsiginfo
 	# KVM patches for OBS
 	patches.arch/ppc-kvm-convert-rma-allocation.patch
+	patches.arch/ppc-kvm-add-hpt-preallocator.patch
 
         ########################################################
         # PS3
