fix NULL pointer dereference in DSS2 VENC sysfs debug attr on OMAP4.

--- a/series.conf
+++ b/series.conf
@@ -369,6 +369,7 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.fixes/0001-fix-NULL-pointer-dereference-in-DSS2-VENC-sysfs-debu.patch
 
 	########################################################
 	# video4linux
