--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-3.2.1
+	patches.kernel.org/patch-3.2.1-2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -207,9 +208,6 @@
 	# for example SLE11 specific BIOS updates (if there is no other
 	# way to safely solve an ACPI issue).
 +trenn	patches.suse/acpi_osi_sle11_ident.patch
-	patches.arch/acpi_srat-pxm-rev-store.patch
-	patches.arch/acpi_srat-pxm-rev-ia64.patch
-	patches.arch/acpi_srat-pxm-rev-x86-64.patch
 
 	# Queued for 2.6.36 -> just revert after some time
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
@@ -233,7 +231,6 @@
 
 	patches.fixes/intel_idle_lapic_param.patch
 	patches.fixes/intel_idle_add_flush_tlb_param.patch
-	patches.fixes/intel_idle_fix_mwait_leave_zero_kvm_issue.patch
 
 	########################################################
 	# AGP, graphics related stuff
