PM / Hibernate: Fix s2disk regression related to freezing workqueues (bnc#743952).

--- a/series.conf
+++ b/series.conf
@@ -464,6 +464,7 @@
 	########################################################
 	# Suspend/Resume stuff
 	########################################################
+	patches.fixes/PM-Hibernate-Fix-s2disk-regression-related-to-freezi.patch
 
 	########################################################
 	# device-mapper
