--- a/series.conf
+++ b/series.conf
@@ -464,7 +464,7 @@
 	########################################################
 	# Suspend/Resume stuff
 	########################################################
-	patches.fixes/PM-Hibernate-Fix-s2disk-regression-related-to-freezi.patch
++jslaby	patches.fixes/PM-Hibernate-Fix-s2disk-regression-related-to-freezi.patch
 
 	########################################################
 	# device-mapper
