--- a/series.conf
+++ b/series.conf
@@ -177,7 +177,6 @@
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
 	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
-	patches.fixes/proc-mem-security-fix
 
         ########################################################
         # IPC patches
@@ -210,9 +209,6 @@
 	# for example SLE11 specific BIOS updates (if there is no other
 	# way to safely solve an ACPI issue).
 +trenn	patches.suse/acpi_osi_sle11_ident.patch
-	patches.arch/acpi_srat-pxm-rev-store.patch
-	patches.arch/acpi_srat-pxm-rev-ia64.patch
-	patches.arch/acpi_srat-pxm-rev-x86-64.patch
 
 	# Queued for 2.6.36 -> just revert after some time
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
@@ -280,7 +276,6 @@
 	########################################################
 	# Reiserfs Patches
 	########################################################
-	patches.fixes/reiserfs-force-inode-evictions-before-umount-to-avoid-crash
 +needs_updating-39	patches.suse/reiser4-dependencies
 
 	########################################################
@@ -552,121 +547,121 @@
 # re-basing to a newer xen tree.
 #
 	### both uml framebuffer and xen need this one.
-	patches.xen/add-console-use-vt
-
-	# split out patches
-	patches.xen/kexec-move-segment-code-i386.patch
-	patches.xen/kexec-move-segment-code-x86_64.patch
-	patches.xen/frontswap-header
-	patches.xen/frontswap-hooks
-	patches.xen/frontswap-core
-	patches.xen/frontswap-config
-	patches.xen/cleancache-update
-	patches.xen/frontswap-cleancache-invalidate
-	patches.xen/ipv6-no-autoconf
-	patches.xen/pci-guestdev
-	patches.xen/pci-reserve
-
-	# bulk stuff, new files for xen
-	patches.xen/xen3-auto-xen-arch.diff
-	patches.xen/xen3-auto-xen-drivers.diff
-	patches.xen/xen3-auto-include-xen-interface.diff
-	patches.xen/xen3-auto-blktap2-pvops.diff
-
-	# kconfig bits for xen
-	patches.xen/xen3-auto-xen-kconfig.diff
-
-	# common code changes
-	patches.xen/xen3-auto-common.diff
-	patches.xen/xen3-auto-arch-x86.diff
-	patches.xen/xen3-auto-arch-i386.diff
-	patches.xen/xen3-auto-arch-x86_64.diff
-
-	# fixups due to upstream Xen parts
-	patches.xen/xen3-fixup-xen
-
-	# newer changeset backports
-
-	# changes outside arch/{i386,x86_64}/xen
-	patches.xen/xen3-fixup-kconfig
-	patches.xen/xen3-fixup-common
-	patches.xen/xen3-fixup-arch-x86
-	patches.xen/xen3-fixup-blktap2-pvops
-
-	# ports of other patches
-	patches.xen/xen3-patch-2.6.18
-	patches.xen/xen3-patch-2.6.19
-	patches.xen/xen3-patch-2.6.20
-	patches.xen/xen3-patch-2.6.21
-	patches.xen/xen3-patch-2.6.22
-	patches.xen/xen3-patch-2.6.23
-	patches.xen/xen3-patch-2.6.24
-	patches.xen/xen3-patch-2.6.25
-	patches.xen/xen3-patch-2.6.26
-	patches.xen/xen3-patch-2.6.27
-	patches.xen/xen3-patch-2.6.28
-	patches.xen/xen3-patch-2.6.29
-	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33
-	patches.xen/xen3-patch-2.6.34
-	patches.xen/xen3-patch-2.6.35
-	patches.xen/xen3-patch-2.6.36
-	patches.xen/xen3-patch-2.6.37
-	patches.xen/xen3-patch-2.6.38
-	patches.xen/xen3-patch-2.6.39
-	patches.xen/xen3-patch-3.0
-	patches.xen/xen3-patch-3.1
-	patches.xen/xen3-patch-3.2
-	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
-	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
-	patches.xen/xen3-stack-unwind
-	patches.xen/xen3-x86_64-unwind-annotations
-
-	# bugfixes and enhancements
-	patches.xen/xen-kconfig-compat
-	patches.xen/xen-sys-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-pcpu-hotplug
-	patches.xen/xen-pcpu-hotplug-kexec
-	patches.xen/xen-mem-hotplug
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-configurable-guest-devices
-	patches.xen/xen-setup-gsi
-	patches.xen/xen-sections
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-balloon-max-target
-	patches.xen/xen-blkif-protocol-fallback-hack
-	patches.xen/xen-blkback-cdrom
-	patches.xen/xen-blktap-modular
-	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-blktap2-configurable-nr-devs
-	patches.xen/xen-op-packet
-	patches.xen/xen-blkfront-cdrom
-	patches.xen/xen-blkfront-hvm-no-cdrom
-	patches.xen/xen-netback-nr-irqs
-	patches.xen/xen-netback-notify-multi
-	patches.xen/xen-netback-generalize
-	patches.xen/xen-netback-multiple-tasklets
-	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-cxgb3
-	patches.xen/xen-dcdbas
-	patches.xen/xen-x86-panic-no-reboot
-	patches.xen/xen-x86-dcr-fallback
-	patches.xen/xen-x86-no-lapic
-	patches.xen/xen-x86-pmd-handling
-	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-exit-mmap
-	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-pcpu
-	patches.xen/xen-x86-EFI
-	patches.xen/xen-x86_64-pgd-pin
-	patches.xen/xen-x86_64-pgd-alloc-order
-	patches.xen/xen-x86_64-dump-user-pgt
-	patches.xen/xen-x86_64-note-init-p2m
-	patches.xen/xen-x86_64-unmapped-initrd
++xen_needs_update	patches.xen/add-console-use-vt
++xen_needs_update
++xen_needs_update	# split out patches
++xen_needs_update	patches.xen/kexec-move-segment-code-i386.patch
++xen_needs_update	patches.xen/kexec-move-segment-code-x86_64.patch
++xen_needs_update	patches.xen/frontswap-header
++xen_needs_update	patches.xen/frontswap-hooks
++xen_needs_update	patches.xen/frontswap-core
++xen_needs_update	patches.xen/frontswap-config
++xen_needs_update	patches.xen/cleancache-update
++xen_needs_update	patches.xen/frontswap-cleancache-invalidate
++xen_needs_update	patches.xen/ipv6-no-autoconf
++xen_needs_update	patches.xen/pci-guestdev
++xen_needs_update	patches.xen/pci-reserve
++xen_needs_update
++xen_needs_update	# bulk stuff, new files for xen
++xen_needs_update	patches.xen/xen3-auto-xen-arch.diff
++xen_needs_update	patches.xen/xen3-auto-xen-drivers.diff
++xen_needs_update	patches.xen/xen3-auto-include-xen-interface.diff
++xen_needs_update	patches.xen/xen3-auto-blktap2-pvops.diff
++xen_needs_update
++xen_needs_update	# kconfig bits for xen
++xen_needs_update	patches.xen/xen3-auto-xen-kconfig.diff
++xen_needs_update
++xen_needs_update	# common code changes
++xen_needs_update	patches.xen/xen3-auto-common.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86.diff
++xen_needs_update	patches.xen/xen3-auto-arch-i386.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86_64.diff
++xen_needs_update
++xen_needs_update	# fixups due to upstream Xen parts
++xen_needs_update	patches.xen/xen3-fixup-xen
++xen_needs_update
++xen_needs_update	# newer changeset backports
++xen_needs_update
++xen_needs_update	# changes outside arch/{i386,x86_64}/xen
++xen_needs_update	patches.xen/xen3-fixup-kconfig
++xen_needs_update	patches.xen/xen3-fixup-common
++xen_needs_update	patches.xen/xen3-fixup-arch-x86
++xen_needs_update	patches.xen/xen3-fixup-blktap2-pvops
++xen_needs_update
++xen_needs_update	# ports of other patches
++xen_needs_update	patches.xen/xen3-patch-2.6.18
++xen_needs_update	patches.xen/xen3-patch-2.6.19
++xen_needs_update	patches.xen/xen3-patch-2.6.20
++xen_needs_update	patches.xen/xen3-patch-2.6.21
++xen_needs_update	patches.xen/xen3-patch-2.6.22
++xen_needs_update	patches.xen/xen3-patch-2.6.23
++xen_needs_update	patches.xen/xen3-patch-2.6.24
++xen_needs_update	patches.xen/xen3-patch-2.6.25
++xen_needs_update	patches.xen/xen3-patch-2.6.26
++xen_needs_update	patches.xen/xen3-patch-2.6.27
++xen_needs_update	patches.xen/xen3-patch-2.6.28
++xen_needs_update	patches.xen/xen3-patch-2.6.29
++xen_needs_update	patches.xen/xen3-patch-2.6.30
++xen_needs_update	patches.xen/xen3-patch-2.6.31
++xen_needs_update	patches.xen/xen3-patch-2.6.32
++xen_needs_update	patches.xen/xen3-patch-2.6.33
++xen_needs_update	patches.xen/xen3-patch-2.6.34
++xen_needs_update	patches.xen/xen3-patch-2.6.35
++xen_needs_update	patches.xen/xen3-patch-2.6.36
++xen_needs_update	patches.xen/xen3-patch-2.6.37
++xen_needs_update	patches.xen/xen3-patch-2.6.38
++xen_needs_update	patches.xen/xen3-patch-2.6.39
++xen_needs_update	patches.xen/xen3-patch-3.0
++xen_needs_update	patches.xen/xen3-patch-3.1
++xen_needs_update	patches.xen/xen3-patch-3.2
++xen_needs_update	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
++xen_needs_update	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
++xen_needs_update	patches.xen/xen3-stack-unwind
++xen_needs_update	patches.xen/xen3-x86_64-unwind-annotations
++xen_needs_update
++xen_needs_update	# bugfixes and enhancements
++xen_needs_update	patches.xen/xen-kconfig-compat
++xen_needs_update	patches.xen/xen-sys-suspend
++xen_needs_update	patches.xen/xen-ipi-per-cpu-irq
++xen_needs_update	patches.xen/xen-virq-per-cpu-irq
++xen_needs_update	patches.xen/xen-clockevents
++xen_needs_update	patches.xen/xen-spinlock-poll-early
++xen_needs_update	patches.xen/xen-pcpu-hotplug
++xen_needs_update	patches.xen/xen-pcpu-hotplug-kexec
++xen_needs_update	patches.xen/xen-mem-hotplug
++xen_needs_update	patches.xen/xen-swiotlb-heuristics
++xen_needs_update	patches.xen/xen-configurable-guest-devices
++xen_needs_update	patches.xen/xen-setup-gsi
++xen_needs_update	patches.xen/xen-sections
++xen_needs_update	patches.xen/xen-unpriv-build
++xen_needs_update	patches.xen/xen-cpufreq-report
++xen_needs_update	patches.xen/xen-balloon-max-target
++xen_needs_update	patches.xen/xen-blkif-protocol-fallback-hack
++xen_needs_update	patches.xen/xen-blkback-cdrom
++xen_needs_update	patches.xen/xen-blktap-modular
++xen_needs_update	patches.xen/xen-blktap-write-barriers
++xen_needs_update	patches.xen/xen-blktap2-configurable-nr-devs
++xen_needs_update	patches.xen/xen-op-packet
++xen_needs_update	patches.xen/xen-blkfront-cdrom
++xen_needs_update	patches.xen/xen-blkfront-hvm-no-cdrom
++xen_needs_update	patches.xen/xen-netback-nr-irqs
++xen_needs_update	patches.xen/xen-netback-notify-multi
++xen_needs_update	patches.xen/xen-netback-generalize
++xen_needs_update	patches.xen/xen-netback-multiple-tasklets
++xen_needs_update	patches.xen/xen-netback-kernel-threads
++xen_needs_update	patches.xen/xen-cxgb3
++xen_needs_update	patches.xen/xen-dcdbas
++xen_needs_update	patches.xen/xen-x86-panic-no-reboot
++xen_needs_update	patches.xen/xen-x86-dcr-fallback
++xen_needs_update	patches.xen/xen-x86-no-lapic
++xen_needs_update	patches.xen/xen-x86-pmd-handling
++xen_needs_update	patches.xen/xen-x86-bigmem
++xen_needs_update	patches.xen/xen-x86-exit-mmap
++xen_needs_update	patches.xen/xen-x86-per-cpu-vcpu-info
++xen_needs_update	patches.xen/xen-x86-pcpu
++xen_needs_update	patches.xen/xen-x86-EFI
++xen_needs_update	patches.xen/xen-x86_64-pgd-pin
++xen_needs_update	patches.xen/xen-x86_64-pgd-alloc-order
++xen_needs_update	patches.xen/xen-x86_64-dump-user-pgt
++xen_needs_update	patches.xen/xen-x86_64-note-init-p2m
++xen_needs_update	patches.xen/xen-x86_64-unmapped-initrd
